addons/kube-ingress-nginx/1.3.1/ingress-ssl-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${INGRESS_API_NAME}
  namespace: ${NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "6000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "6000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "6000"
    # 每个 IP 每秒可以访问 30 次
    nginx.ingress.kubernetes.io/limit-rps: "3000"
    nginx.ingress.kubernetes.io/limit-connections: "25536"
    # 为计算限速漏桶算法的 burst size，和 limit-rps 的相乘系数
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "76608000"
    # 配合 limit-window 表示全局限速 100 次每秒（需要依赖 memcached）
    # nginx.ingress.kubernetes.io/global-rate-limit: "3"
    # nginx.ingress.kubernetes.io/global-rate-limit-window: 1s
    # 限制发送给后端服务的发送速率为 1MB 每秒
    nginx.ingress.kubernetes.io/limit-rate: "1024"
    # 发送给后端服务的前 10MB 数据不进行限速
    nginx.ingress.kubernetes.io/limit-rate-after: "10240"
    # 超出后的响应码
    nginx.ingress.kubernetes.io/configuration-snippet: |
        limit_req_status 429;
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ${INGRESS_API_HOST}
    secretName: ${INGRESS_SECRET}
  rules:
  - host: ${INGRESS_API_HOST}
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: ${INGRESS_SVC_NAME}
            port:
              number: ${INGRESS_SVC_PORT}
